分类完成（半成品），商品详情未完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="special_offer">特价</string>
     <string name="shopping_trolley">购物车</string>
     <string name="myself">我的</string>
+    <string name="rank">排行榜</string>
 </resources>
