--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,13 @@
     <string name="hot_search">热搜</string>
     <string name="subscription">订阅号</string>
     <string name="nologin">立即登录查看更多信息</string>
+    <string name="findSimilar">找相似</string>
+    
+    
+    <string name="login">登录</string>
+    <string name="login_synchronization">登录后同步电脑与手机购物车中的商品</string>
+    <string name="shopping_trolley_isempty">购物车是空的</string>
+    <string name="qianggou">抢618好货</string>
+    <string name="look_follow">看看关注</string>
+
 </resources>
