--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,13 @@
     <string name="login">登录</string>
     <string name="login_synchronization">登录后同步电脑与手机购物车中的商品</string>
     <string name="shopping_trolley_isempty">购物车是空的</string>
-    <string name="qianggou">抢618好货</string>
+    <string name="rush">抢618好货</string>
     <string name="look_follow">看看关注</string>
+    
+    <string name="obligation">待付款</string>
+    <string name="wait_for_receiving">待收货</string>
+    <string name="no_evaluated">待评价</string>
+    <string name="after_sale">退换/售后</string>
+    <string name="my_order">我的订单</string>
 
 </resources>
