--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,7 @@
     <string name="after_sale">退换/售后</string>
     <string name="my_order">我的订单</string>
 
+    <string name="buy">购买</string>
+    <string name="count">数量</string>
+
 </resources>
