--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,7 @@
 
     <string name="buy">购买</string>
     <string name="count">数量</string>
+    <string name="all_selected">全选</string>
+    <string name="goto_account">去结算</string>
 
 </resources>
