--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,5 +85,10 @@
     <string name="real_name_authentication">实名认证</string>
     <string name="account_security">账户安全</string>
     <string name="connected_account">关联账号</string>
+    
+    <string name="synthesize">综合</string>
+    <string name="sales_volume">销量</string>
+    <string name="price">价格</string>
+    <string name="filtrate">筛选</string>
 
 </resources>
