--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,8 +53,8 @@
     <string name="subscription">订阅号</string>
     <string name="nologin">立即登录查看更多信息</string>
     <string name="findSimilar">找相似</string>
-    
-    
+
+
     <string name="login">登录</string>
     <string name="et_login">用户名/邮箱/手机号</string>
     <string name="password">密码</string>
@@ -62,12 +62,12 @@
     <string name="phone_register">手机快速注册</string>
     <string name="find_password">找回密码</string>
     <string name="login_and_register">登录/注册</string>
-    
+
     <string name="login_synchronization">登录后同步电脑与手机购物车中的商品</string>
     <string name="shopping_trolley_isempty">购物车是空的</string>
     <string name="rush">抢618好货</string>
     <string name="look_follow">看看关注</string>
-    
+
     <string name="obligation">待付款</string>
     <string name="wait_for_receiving">待收货</string>
     <string name="no_evaluated">待评价</string>
@@ -85,20 +85,30 @@
     <string name="real_name_authentication">实名认证</string>
     <string name="account_security">账户安全</string>
     <string name="connected_account">关联账号</string>
-    
+
     <string name="synthesize">综合</string>
     <string name="sales_volume">销量</string>
     <string name="price">价格</string>
     <string name="filtrate">筛选</string>
-    
+
     <string name="delivery">快递配送</string>
     <string name="brand">品牌</string>
 
     <string name="synthesize_sort">综合排序</string>
     <string name="new_goods">新品优先</string>
     <string name="recommend_from_hight_to_low">评价数从高到低</string>
-    
+
     <string name="price_section">价格区间</string>
     <string name="all">全部</string>
     <string name="all_classify">全部分类</string>
+
+    <!--我的日历-->
+    <string name="remind_list">提醒列表</string>
+    <string name="home_furnishing">家居家装</string>
+    <string name="household_appliances">家用电器</string>
+    <string name="food_fresh">食品生鲜</string>
+    <string name="general_merchandise">日用百货</string>
+    <string name="shoe_and_bag">鞋靴箱包</string>
+    <string name="mobile_digital">手机数码</string>
+    <string name="horologe_jewelry">钟表珠宝</string>
 </resources>
